Scrollbar fix

--- a/public/default.css
+++ b/public/default.css
@@ -42,6 +42,7 @@ a {
 #chat {
     height: 388px;
     padding: 10px;
+    overflow-y: scroll;
 }
 
 #input {
